--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -201,6 +201,7 @@
   <string name="ConversationActivity_no_results">結果なし</string>
   <string name="ConversationActivity_sticker_pack_installed">ステッカーパックをインストールしました</string>
   <string name="ConversationActivity_new_say_it_with_stickers">新機能！ステッカーを使いましょう</string>
+  <string name="ConversationActivity_block_s">%1$s をブロックしますか？</string>
   <string name="ConversationActivity_you_will_be_able_to_message_and_call_each_other">お互いにメッセージや通話ができるようになります。</string>
   <string name="ConversationActivity_group_members_will_be_able_to_add_you_to_this_group_again">グループのメンバーはあなたをもう一度このグループに加えることができます。</string>
   <string name="ConversationActivity_you_will_leave_this_group_and_no_longer_receive_messages_or_updates">このグループから退出して、今後メッセージや更新を受信しなくなります。</string>
@@ -707,6 +708,7 @@
   <string name="SubmitDebugLogActivity_submit">送信</string>
   <string name="SubmitDebugLogActivity_success">成功しました！</string>
   <string name="SubmitDebugLogActivity_copied_to_clipboard">クリップボードにコピーしました</string>
+  <string name="SubmitDebugLogActivity_ok">OK</string>
   <string name="SubmitDebugLogActivity_share">共有する</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">グループが更新されました</string>
